# Plantifier

./: .env  .ml_engine.pickle  .test_data.csv  .test_data1.csv  .test_excel.csv  .training_dataset.csv  README.md  pyproject.toml  setup.cfg
Front-end/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
Front-end/e2e/src/: app.e2e-spec.ts
Front-end/src/: index.html
Front-end/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts
Front-end/src/app/services/: flower.service.ts
Front-end/src/app/shared/: baseURL.ts
atipcore/: __init__.py  app_factory.py  cosine_similarity.py  errorhandler.py  ext.py  ml_model.py  scorer.py  test.py
atipcore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py
